--- a/home-6.html
+++ b/home-6.html
@@ -68,9 +68,9 @@
             </div>
             <div class="mobile-menu">
                 <ul>
-                    <li class="menu-item-has-children">
+                    <li >
                         <a href="#">Home</a>
-                        <ul class="sub-menu">
+                        <!-- <ul class="sub-menu">
                             <li class="menu-item-has-children">
                                 <a href="#">Multipage</a>
                                 <ul class="sub-menu">
@@ -88,13 +88,13 @@
                                     </li>
                                     <li>
                                         <a href="home-5.html">Home 05</a>
-                                    </li>
+                                    </li> -->
                                     <li>
-                                        <a href="home-6.html">Home 06</a>
+                                        <a href="home-6.html"></a>
                                     </li>
-                                </ul>
+                                <!-- </ul> -->
                             </li>
-                            <li class="menu-item-has-children">
+                            <!-- <li class="menu-item-has-children">
                                 <a href="#">RTL</a>
                                 <ul class="sub-menu">
                                     <li>
@@ -117,39 +117,39 @@
                                     </li>
                                 </ul>
                             </li>
-                            
+                             -->
                         </ul>
                     </li>
                     <li>
                         <a href="about.html">About</a>
                     </li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Pages</a>
-                        <ul class="sub-menu">
+                    <li >
+                        <a href="#">Products</a>
+                        <!-- <ul class="sub-menu">
                             <li><a href="team.html">Team Page</a></li>
-                            <li><a href="team-details.html">Team Details</a></li>
-                            <li><a href="shop.html">Shop Page</a></li>
-                            <li><a href="shop-details.html">Shop Details</a></li>
+                            <li><a href="team-details.html">Team Details</a></li> -->
+                           <a href="shop.html"></a>
+                            <!-- <li><a href="shop-details.html">Shop Details</a></li>
                             <li><a href="cart.html">Cart</a></li>
                             <li><a href="checkout.html">Checkout</a></li>
                             <li><a href="wishlist.html">Wishlist</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
-                    <li class="menu-item-has-children">
+                    <!-- <li class="menu-item-has-children">
                         <a href="#">Project</a>
                         <ul class="sub-menu">
                             <li><a href="project.html">Projects</a></li>
                             <li><a href="project-details.html">Project Details</a></li>
                         </ul>
-                    </li>
-                    <li class="menu-item-has-children">
+                    </li> -->
+                    <!-- <li class="menu-item-has-children">
                         <a href="#">Service</a>
                         <ul class="sub-menu">
                             <li><a href="service.html">Service</a></li>
                             <li><a href="service-details.html">Service Details</a></li>
                         </ul>
-                    </li>
-                    <li class="menu-item-has-children">
+                    </li> -->
+                    <!-- <li class="menu-item-has-children">
                         <a href="#">Shop</a>
                         <ul class="sub-menu">
                             <li><a href="shop.html">Shop</a></li>
@@ -158,7 +158,7 @@
                             <li><a href="checkout.html">Checkout</a></li>
                             <li><a href="wishlist.html">Wishlist</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li class="menu-item-has-children">
                         <a href="#">Blog</a>
                         <ul class="sub-menu">
@@ -272,9 +272,9 @@
                         <div class="col-auto">
                             <nav class="main-menu d-none d-lg-inline-block">
                                 <ul>
-                                    <li class="menu-item-has-children">
+                                    <li >
                                         <a href="#">Home</a>
-                                        <ul class="sub-menu">
+                                        <!-- <ul class="sub-menu">
                                             <li class="menu-item-has-children">
                                                 <a href="#">Multipage</a>
                                                 <ul class="sub-menu">
@@ -292,13 +292,13 @@
                                                     </li>
                                                     <li>
                                                         <a href="home-5.html">Home 05</a>
-                                                    </li>
-                                                    <li>
+                                                    </li> -->
+                                                    <!-- <li> -->
                                                         <a href="home-6.html">Home 06</a>
-                                                    </li>
+                                                    <!-- </li>
                                                 </ul>
-                                            </li>
-                                            <li class="menu-item-has-children">
+                                            </li> -->
+                                            <!-- <li class="menu-item-has-children">
                                                 <a href="#">RTL</a>
                                                 <ul class="sub-menu">
                                                     <li>
@@ -323,7 +323,7 @@
                                             </li>
                                             
                                         </ul>
-                                    </li>
+                                    </li> -->
                                     <li>
                                         <a href="about.html">About Us</a>
                                     </li>
