--- a/shop.html
+++ b/shop.html
@@ -68,9 +68,9 @@
             </div>
             <div class="mobile-menu">
                 <ul>
-                    <li class="menu-item-has-children">
+                    <li >
                         <a href="#">Home</a>
-                        <ul class="sub-menu">
+                        <!-- <ul class="sub-menu">
                             <li class="menu-item-has-children">
                                 <a href="#">Multipage</a>
                                 <ul class="sub-menu">
@@ -89,12 +89,12 @@
                                     <li>
                                         <a href="home-5.html">Home 05</a>
                                     </li>
-                                    <li>
-                                        <a href="home-6.html">Home 06</a>
-                                    </li>
-                                </ul>
+                                    <li> -->
+                                        <a href="home-6.html"></a>
+                                    <!-- </li>
+                                </ul> -->
                             </li>
-                            <li class="menu-item-has-children">
+                            <!-- <li class="menu-item-has-children">
                                 <a href="#">RTL</a>
                                 <ul class="sub-menu">
                                     <li>
@@ -117,25 +117,27 @@
                                     </li>
                                 </ul>
                             </li>
-                            
+                             -->
                         </ul>
                     </li>
                     <li>
                         <a href="about.html">About</a>
                     </li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Pages</a>
-                        <ul class="sub-menu">
+                    <li >
+                        <a href="#">Products</a>
+                        <!-- <ul class="sub-menu">
                             <li><a href="team.html">Team Page</a></li>
-                            <li><a href="team-details.html">Team Details</a></li>
-                            <li><a href="shop.html">Shop Page</a></li>
-                            <li><a href="shop-details.html">Shop Details</a></li>
+                            <li><a href="team-details.html">Team Details</a></li> -->
+                            <!-- <li> -->
+                                <a href="shop.html"></a>
+                            <!-- </li> -->
+                            <!-- <li><a href="shop-details.html">Shop Details</a></li>
                             <li><a href="cart.html">Cart</a></li>
                             <li><a href="checkout.html">Checkout</a></li>
                             <li><a href="wishlist.html">Wishlist</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
-                    <li class="menu-item-has-children">
+                    <!-- <li class="menu-item-has-children">
                         <a href="#">Project</a>
                         <ul class="sub-menu">
                             <li><a href="project.html">Projects</a></li>
@@ -148,8 +150,8 @@
                             <li><a href="service.html">Service</a></li>
                             <li><a href="service-details.html">Service Details</a></li>
                         </ul>
-                    </li>
-                    <li class="menu-item-has-children">
+                    </li> -->
+                    <!-- <li class="menu-item-has-children">
                         <a href="#">Shop</a>
                         <ul class="sub-menu">
                             <li><a href="shop.html">Shop</a></li>
@@ -158,7 +160,7 @@
                             <li><a href="checkout.html">Checkout</a></li>
                             <li><a href="wishlist.html">Wishlist</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li class="menu-item-has-children">
                         <a href="#">Blog</a>
                         <ul class="sub-menu">
@@ -183,9 +185,9 @@
                     <div class="col-auto d-none d-lg-block">
                         <div class="header-links">
                             <ul>
-                                <li><i class="fas fa-envelope"></i><a href="mailto:info@example.com">info@example.com</a></li>
-                                <li><i class="fas fa-map-marker-alt"></i>6391 Elgin St. Celina, 10299</li>
-                                <li><i class="fas fa-clock"></i>Sunday - Friday</li>
+                                <li><i class="fas fa-envelope"></i><a href="mailto:info@example.com">alaweerauto@gmail.com</a></li>
+                                <li><i class="fas fa-map-marker-alt"></i>Sanaiya- Al Ain Abu Dhabi UAE Fax: 03 7213041 - P. . Box: 63951</li>
+                                <li><i class="fas fa-clock"></i> 8 AM To 10 PM</li>
                             </ul>
                         </div>
                     </div>
@@ -222,9 +224,9 @@
                         <div class="col-auto">
                             <nav class="main-menu d-none d-lg-inline-block">
                                 <ul>
-                                    <li class="menu-item-has-children">
+                                    <li >
                                         <a href="#">Home</a>
-                                        <ul class="sub-menu">
+                                        <!-- <ul class="sub-menu">
                                             <li class="menu-item-has-children">
                                                 <a href="#">Multipage</a>
                                                 <ul class="sub-menu">
@@ -243,12 +245,12 @@
                                                     <li>
                                                         <a href="home-5.html">Home 05</a>
                                                     </li>
-                                                    <li>
-                                                        <a href="home-6.html">Home 06</a>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li class="menu-item-has-children">
+                                                    <li> -->
+                                                        <a href="home-6.html"></a>
+                                                    <!-- </li>
+                                                </ul> -->
+                                            <!-- </li> -->
+                                            <!-- <li class="menu-item-has-children">
                                                 <a href="#">RTL</a>
                                                 <ul class="sub-menu">
                                                     <li>
@@ -270,27 +272,27 @@
                                                         <a href="home-6-rtl.html">Home 06 (RTL)</a>
                                                     </li>
                                                 </ul>
-                                            </li>
+                                            </li> -->
                                             
-                                        </ul>
+                                        <!-- </ul> -->
                                     </li>
                                     <li>
                                         <a href="about.html">About Us</a>
                                     </li>
-                                    <li class="menu-item-has-children">
+                                    <!-- <li class="menu-item-has-children">
                                         <a href="#">Services</a>
                                         <ul class="sub-menu">
                                             <li><a href="service.html">Service</a></li>
                                             <li><a href="service-details.html">Service Details</a></li>
                                         </ul>
-                                    </li>
-                                    <li class="menu-item-has-children">
+                                    </li> -->
+                                    <!-- <li class="menu-item-has-children">
                                         <a href="#">Projects</a>
                                         <ul class="sub-menu">
                                             <li><a href="project.html">Projects</a></li>
                                             <li><a href="project-details.html">Projects Details</a></li>
                                         </ul>
-                                    </li>
+                                    </li> -->
                                     <li class="menu-item-has-children">
                                         <a href="#">Blog</a>
                                         <ul class="sub-menu">
@@ -298,17 +300,19 @@
                                             <li><a href="blog-details.html">Blog Details</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Pages</a>
-                                        <ul class="sub-menu">
+                                    <li >
+                                        <a href="#">Products</a>
+                                        <!-- <ul class="sub-menu">
                                             <li><a href="team.html">Team Page</a></li>
-                                            <li><a href="team-details.html">Team Details</a></li>
-                                            <li><a href="shop.html">Shop Page</a></li>
-                                            <li><a href="shop-details.html">Shop Details</a></li>
+                                            <li><a href="team-details.html">Team Details</a></li> -->
+                                            <!-- <li> -->
+                                                <a href="shop.html"></a>
+                                            <!-- </li> -->
+                                            <!-- <li><a href="shop-details.html">Shop Details</a></li>
                                             <li><a href="cart.html">Cart</a></li>
                                             <li><a href="checkout.html">Checkout</a></li>
                                             <li><a href="wishlist.html">Wishlist</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>                                    
                                     <li>
                                         <a href="contact.html">Contact</a>
@@ -324,7 +328,7 @@
                                 <img src="assets/img/icon/chat.svg" alt="img">
                                 <div class="navbar-right-desc-details">
                                     <h6 class="title">Need help?</h6>
-                                    <a class="link" href="tel:+2590256215">(307) 555-0133</a>
+                                    <a class="link" href="tel:+2590256215"> 03 7213838 </a>
                                 </div>
                             </div>
                         </div>
@@ -585,13 +589,13 @@
                         <div class="widget widget_categories  ">
                             <h3 class="widget_title">Product categories</h3>
                             <ul>
-                                <li><a href="service-details.html">Steering wheel</a><span>(12)</span></li>
-                                <li><a href="service-details.html">Suspension spring</a> <span>(12)</span></li>
-                                <li><a href="service-details.html">Tail light</a><span>(08)</span></li>
-                                <li><a href="service-details.html">Transmission</a><span>(13)</span></li>
-                                <li><a href="service-details.html">Windshield wiper motor</a><span>(03)</span></li>
-                                <li><a href="service-details.html">Fuel injector</a><span>(03)</span></li>
-                                <li><a href="service-details.html">Find your product</a><span>(03)</span></li>
+                                <li><a href="service-details.html">OEM & Spare Parts</a><span>(12)</span></li>
+                                <li><a href="service-details.html">Aftermarket Components</a> <span>(12)</span></li>
+                                <li><a href="service-details.html">Vehicle Batteries</a><span>(08)</span></li>
+                                <li><a href="service-details.html">Car Fluids & Coolants</a><span>(13)</span></li>
+                                <li><a href="service-details.html">Tyres & Wheels</a><span>(03)</span></li>
+                                <li><a href="service-details.html">Car Accessories</a><span>(03)</span></li>
+                                <li><a href="service-details.html">Lubricants & Oils</a><span>(03)</span></li>
                             </ul>
                         </div>
 
@@ -659,15 +663,15 @@
                 <div class="media-body">
                     <h6 class="title text-white">Requesting A Call:</h6>
                     <h4 class="link">
-                        <a class="text-white" href="tel:6295550129">(629) 555-0129</a>
+                        <a class="text-white" href="tel:6295550129">03 7213838</a>
                     </h4>
                 </div>
             </div>
-            <div class="social-btn">
+            <!-- <div class="social-btn">
                 <a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
                 <a href="https://instagram.com/"><i class="fab fa-instagram"></i></a>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -684,14 +688,14 @@
                             <div class="menu-all-pages-container">
                                 <ul class="menu">
                                     <li><a href="about.html">About</a></li>
-                                    <li><a href="team.html">Team</a></li>
+                                    <!-- <li><a href="team.html">Team</a></li> -->
                                     <li><a href="contact.html">Faq</a></li>
                                     <li><a href="contact.html">Privacy Policy</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-xl-auto">
+                    <!-- <div class="col-md-6 col-xl-auto">
                         <div class="widget widget_nav_menu footer-widget">
                             <h3 class="widget_title">Services</h3>
                             <div class="menu-all-pages-container">
@@ -704,21 +708,21 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-md-6 col-xl-auto">
                         <div class="widget footer-widget">
                             <h3 class="widget_title">Contact</h3>
                             <div class="widget-contact">
-                                <p><a href="tel:888123456765">(+888) 123 456 765</a></p>
-                                <p><a href="mailto:infoname@mail.com">infoname@mail.com</a></p>
-                                <p>Old city Street,USA <br> 1212 New york-3500</p>
+                                <p><a href="tel:888123456765">03 7213838</a></p>
+                                <p><a href="mailto:infoname@mail.com">alaweerauto@gmail.com</a></p>
+                                <p>Sanaiya- Al Ain Abu Dhabi UAE <br> Fax: 03 7213041 - P. . Box: 63951</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-auto">
                         <div class="widget footer-widget widget-newsletter">
                             <h3 class="widget_title">Get In Touch</h3>
-                            <p class="footer-text mb-50">Lorem Ipsum is simply is dumiomy is text Lorem Ipsum is simply</p>
+                            <p class="footer-text mb-50">We’re here to assist you with all your auto spare parts needs!</p>
                             <form class="newsletter-form">
                                 <div class="form-group">
                                     <input class="form-control" type="email" placeholder="Your Email Address" required="">
@@ -736,7 +740,7 @@
                     <div class="col-auto align-self-center"><p class="copyright-text text-center">© <a href="#">Fixturbo</a> 2024 | All Rights Reserved</p></div>
                     <div class="col-auto">
                         <div class="footer-links">
-                            <a href="contact.html">Tarms & Condition</a>
+                            <a href="contact.html">Terms & Condition</a>
                             <a href="contact.html">Privacy Policy</a>
                             <a href="contact.html">Contact Us</a>
                         </div>
