--- a/shop.html
+++ b/shop.html
@@ -348,10 +348,10 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="breadcumb-content">
-                        <h1 class="breadcumb-title">Shop</h1>
+                        <h1 class="breadcumb-title">Products</h1>
                         <ul class="breadcumb-menu">
                             <li><a href="index.html">Home</a></li>
-                            <li class="active">Shop</li>
+                            <li class="active">Products</li>
                         </ul>
                     </div>
                 </div>
