--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Fixturbo - Car Repair & Auto Services HTML Template</title>
+    <title>AL AWEER AUTO SPARE PARTS - Car Repair & Auto Services HTML Template</title>
     <meta name="description" content="Fixturbo - Car Repair & Auto Services HTML Template">
     <meta name="keywords" content="Fixturbo - Car Repair & Auto Services HTML Template">
     <meta name="robots" content="INDEX,FOLLOW">
@@ -156,12 +156,12 @@
                             <li><a href="wishlist.html">Wishlist</a></li>
                         </ul>
                     </li> -->
-                    <li class="menu-item-has-children">
+                    <li>
                         <a href="#">Blog</a>
-                        <ul class="sub-menu">
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul>
+                        <!-- <ul class="sub-menu"> -->
+                            <a href="blog.html"></a>
+                            <!-- <li><a href="blog-details.html">Blog Details</a></li> -->
+                        <!-- </ul> -->
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -290,12 +290,12 @@
                                             <li><a href="project-details.html">Projects Details</a></li>
                                         </ul>
                                     </li> -->
-                                    <li class="menu-item-has-children">
+                                    <li >
                                         <a href="#">Blog</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog.html">Blog</a></li>
-                                            <li><a href="blog-details.html">Blog Details</a></li>
-                                        </ul>
+                                        <!-- <ul class="sub-menu"> -->
+                                          <a href="blog.html"></a>
+                                            <!-- <li><a href="blog-details.html">Blog Details</a></li>
+                                        </ul> -->
                                     </li>
                                     <li >
                                         <a href="#">Products</a>
@@ -795,7 +795,7 @@
         <div class="copyright-wrap">
             <div class="container">
                 <div class="row gy-3 justify-content-md-between justify-content-center">
-                    <div class="col-auto align-self-center"><p class="copyright-text text-center">© <a href="#">Fixturbo</a> 2024 | All Rights Reserved</p></div>
+                    <div class="col-auto align-self-center"><p class="copyright-text text-center">© <a href="#">AL AWEER AUTO SPARE PARTS</a> 2018 | All Rights Reserved</p></div>
                     <div class="col-auto">
                         <div class="footer-links">
                             <a href="contact.html">Terms & Condition</a>
