--- a/shop.html
+++ b/shop.html
@@ -589,17 +589,17 @@
                         <div class="widget widget_categories  ">
                             <h3 class="widget_title">Product categories</h3>
                             <ul>
-                                <li><a href="service-details.html">OEM & Spare Parts</a><span>(12)</span></li>
-                                <li><a href="service-details.html">Aftermarket Components</a> <span>(12)</span></li>
-                                <li><a href="service-details.html">Vehicle Batteries</a><span>(08)</span></li>
-                                <li><a href="service-details.html">Car Fluids & Coolants</a><span>(13)</span></li>
-                                <li><a href="service-details.html">Tyres & Wheels</a><span>(03)</span></li>
-                                <li><a href="service-details.html">Car Accessories</a><span>(03)</span></li>
-                                <li><a href="service-details.html">Lubricants & Oils</a><span>(03)</span></li>
+                                <li><a >OEM & Spare Parts</a><span>(12)</span></li>
+                                <li><a >Aftermarket Components</a> <span>(12)</span></li>
+                                <li><a>Vehicle Batteries</a><span>(08)</span></li>
+                                <li><a>Car Fluids & Coolants</a><span>(13)</span></li>
+                                <li><a >Tyres & Wheels</a><span>(03)</span></li>
+                                <li><a >Car Accessories</a><span>(03)</span></li>
+                                <li><a>Lubricants & Oils</a><span>(03)</span></li>
                             </ul>
                         </div>
 
-                        <div class="widget widget_price_filter  ">
+                        <!-- <div class="widget widget_price_filter  ">
                             <h4 class="widget_title">Filter By Price</h4>
                             <div class="price_slider_wrapper">
                                 <div class="price_slider"></div>
@@ -608,7 +608,7 @@
                                     <button type="submit" class="button btn">Filter</button>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="widget product_ratting_widget">
                             <h3 class="widget_title">Sort by Raiting</h3>
