--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     <div class="mobile-menu-wrapper">
         <div class="mobile-menu-area">
             <div class="mobile-logo">
-                <a href="index.html"><img src="assets/img/logo.svg" alt="Fixturbo"></a>
+                <a href="index.html"><img src="assets/img/logo.svg" alt="Al Aweer"></a>
                 <button class="menu-toggle"><i class="fa fa-times"></i></button>
             </div>
             <div class="mobile-menu">
