--- a/home-6.html
+++ b/home-6.html
@@ -592,15 +592,15 @@
     <div class="product-area-1 space-top bg-smoke overflow-hidden">
         <div class="container">
             <div class="title-area text-center mb-20">
-                <h3 class="sec-title">Featured Products</h3>
+                <h3 class="sec-title">Featured   Products</h3>
             </div>
-            <div class="portfolio-tab-1 mb-45">
+            <!-- <div class="portfolio-tab-1 mb-45">
                 <div class="filter-menu-active text-center">
                     <button data-filter="*" class="active btn style-border3" type="button">Featured Products</button>
                     <button class="btn style-border3" data-filter=".cat1" type="button">Windshield </button>
                     <button class="btn style-border3" data-filter=".cat2" type="button">Engine pistons</button>
                 </div>
-            </div>
+            </div> -->
             <div class="row gy-30 gx-30 masonary-active">
                 <div class="col-lg-3 col-sm-6 filter-item cat2">
                     <div class="product-card">
@@ -620,7 +620,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </span>
-                            <span class="price"><del>110 AED</del> 92 AED</span>
+                            <!-- <span class="price"><del>110 AED</del> 92 AED</span> -->
                             <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -639,7 +639,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </span>
-                            <span class="price"><del>110 AED</del> 92 AED</span>
+                            <!-- <span class="price"><del>110 AED</del> 92 AED</span> -->
                             <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -661,7 +661,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </span>
-                            <span class="price"><del>110 AED</del> 92 AED</span>
+                            <!-- <span class="price"><del>110 AED</del> 92 AED</span> -->
                             <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -680,7 +680,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </span>
-                            <span class="price"><del>110 AED</del> 92 AED</span>
+                            <!-- <span class="price"><del>110 AED</del> 92 AED</span> -->
                             <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -699,7 +699,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </span>
-                            <span class="price"><del>110 AED</del> 92 AED</span>
+                            <!-- <span class="price"><del>110 AED</del> 92 AED</span> -->
                             <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -722,7 +722,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </span>
-                            <span class="price"><del>110 AED</del> 92 AED</span>
+                            <!-- <span class="price"><del>110 AED</del> 92 AED</span> -->
                             <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -741,7 +741,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </span>
-                            <span class="price"><del>110 AED</del> 92 AED</span>
+                            <!-- <span class="price"><del>110 AED</del> 92 AED</span> -->
                             <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -764,7 +764,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </span>
-                            <span class="price"><del>110 AED</del> 92 AED</span>
+                            <!-- <span class="price"><del>110 AED</del> 92 AED</span> -->
                             <a href="#" class="link-btn">Enquire Now <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
