--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
     </div>
     <!--==============================
     Mobile Menu
-    ============================== -->
+    ============================== --> 
     <div class="mobile-menu-wrapper">
         <div class="mobile-menu-area">
             <div class="mobile-logo">
-                <a href="index.html"><img src="assets/img/logo.svg" alt="Fixturbo"></a>
+                <a href="index.html"><img src="assets/img/logo.svg" alt="AL Aweer"  ></a>
                 <button class="menu-toggle"><i class="fa fa-times"></i></button>
             </div>
             <div class="mobile-menu">
