--- a/about.html
+++ b/about.html
@@ -802,6 +802,7 @@
                             <a href="contact.html">Terms & Condition</a>
                             <a href="contact.html">Privacy Policy</a>
                             <a href="contact.html">Contact Us</a>
+                            <a href="assets/img/Scanned Document.pdf" target="_blank">License</a>
                         </div>
                     </div>
                 </div>                
