--- a/home-6.html
+++ b/home-6.html
@@ -1181,7 +1181,7 @@
                     </div>
                 </div>
             </div>
-            <div classname=""><img src="assets/img/appreciation.jpeg" alt="appreciation" width="200" height="100"></div>
+            <div classname=""><img src="assets/img/Appreciation.png" alt="appreciation" width="200" height="100"></div>
             <!-- <div class="row global-carousel blog-slider slider-shadow" data-slide-show="3" data-lg-slide-show="2" data-md-slide-show="1" data-sm-slide-show="1" data-xs-slide-show="1" data-dots="false">
                 <div class="col-md-6 col-lg-4">
                     <div class="blog-card style2">
