--- a/home-6.html
+++ b/home-6.html
@@ -457,7 +457,7 @@
                             <img src="assets/img/update-img/hero6-4.png" alt="img">
                         </div>
                         <div class="intro-card-details">
-                            <h6 class="intro-card-subtitle text-white">save up to 18.37</h6>
+                            <h6 class="intro-card-subtitle text-white">save up to 18.37 AED</h6>
                             <h4 class="intro-card-title text-white"><a href="#">Fast Delivery, Unmatched Support</a></h4>
                             <a href="shop.html" class="btn style5 style-radius">DISCOVER OUR PRODUCTS<i class="fas fa-arrow-right ms-2"></i></a>
                         </div>
