--- a/shop.html
+++ b/shop.html
@@ -351,7 +351,7 @@
                         <h1 class="breadcumb-title">Products</h1>
                         <ul class="breadcumb-menu">
                             <li><a href="index.html">Home</a></li>
-                            <li class="active">Products</li>
+                            <li class="active">Products page</li>
                         </ul>
                     </div>
                 </div>
